# backend/src/CloudCrafter.Domain/Domain/Server/UpdateServerDto.cs
@@ -3,4 +3,5 @@ namespace CloudCrafter.Domain.Domain.Server;
 public class UpdateServerDto
 {
     public string? Name { get; set; }
+    public string? DockerNetwork { get; set; }
 }
